glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/confidence-levels.glx
confidence_levels:
  high:
    label: "High"
  medium:
    label: "Medium"
  low:
    label: "Low"


